WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
177095
ErrorInstance and Exception need destroy methods
https://bugs.webkit.org/show_bug.cgi?id=177095
Summary
ErrorInstance and Exception need destroy methods
Filip Pizlo
Reported
2017-09-18 12:30:13 PDT
Patch forthcoming.
Attachments
the patch
(2.87 KB, patch)
2017-09-18 15:38 PDT
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2017-09-18 15:38:38 PDT
Created
attachment 321140
[details]
the patch
Filip Pizlo
Comment 2
2017-09-18 15:41:23 PDT
landed in
https://trac.webkit.org/changeset/222186/webkit
Radar WebKit Bug Importer
Comment 3
2017-09-27 12:26:05 PDT
<
rdar://problem/34693271
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug