ErrorInstance and Exception need destroy methods https://bugs.webkit.org/show_bug.cgi?id=177095

Reviewed by Saam Barati.

When I made ErrorInstance and Exception into JSDestructibleObjects, I forgot to make them
follow that type's protocol.

* runtime/ErrorInstance.cpp:
(JSC::ErrorInstance::destroy): Implement this to fix leaks.
* runtime/ErrorInstance.h:
* runtime/Exception.h: Change how this is declared now that this is a DestructibleObject.



Canonical link: https://commits.webkit.org/193508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222186 268f45cc-cd09-0410-ab3c-d52691b4dbfc