Source/JavaScriptCore/runtime/ErrorInstance.h
@@ -76,6 +76,7 @@ protected:
     explicit ErrorInstance(VM&, Structure*);
 
     void finishCreation(ExecState*, VM&, const String&, bool useCurrentFrame = true);
+    static void destroy(JSCell*);
 
     static void visitChildren(JSCell*, SlotVisitor&);
 
